# StrangeGame

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.json
dependency/dep/: laynii_lib.cpp
dependency/glad/: gl.h  glad.c  glad.h
dependency/ogt/: ogt_vox.h
game/: CMakeLists.txt  Game.cpp  Game.h  Game.hpp
game/options/: Options.cpp  Options.hpp
game/render/: Camera.cpp  Camera.h  Camera.hpp  Shader.h  VoxelRender.cpp  VoxelRender.h  Window.cpp  Window.h  Window.hpp
game/render/polygon/: PolygonRender.cpp  PolygonRender.hpp
game/render/polygon/mesh/: Mesh.cpp  Mesh.hpp  MeshBuilder.cpp  MeshBuilder.hpp  MeshStorage.cpp  MeshStorage.hpp
game/render/polygon/object/: Object.cpp  Object.hpp
game/render/shaders/: RaycastShader.cpp  RaycastShader.h  RaycastShader.hpp  Shader.cpp  Shader.h  Shader.hpp
game/render/voxel/: VoxelRender.cpp  VoxelRender.h  VoxelRender.hpp
game/resources/: options.toml
game/resources/shaders/: caster.comp  fragment.glsl  newcaster.comp  newnewcaster.comp  vertex.glsl
game/resources/shaders/polygon/: fragment_pol.glsl  vertex_pol.glsl
game/resources/shaders/raytracing/: newnewcaster.comp  raycaster.comp
game/utils/: Color.cpp  Color.h  Input.cpp  Input.h  Input.hpp  Paths.cpp  Paths.hpp
game/world/: Node.cpp  Node.h  Node.hpp  Octree.cpp  Octree.h  Octree.hpp  TraceStack.cpp  TraceStack.hpp  Voxel.cpp  Voxel.h  World.cpp  World.h  World.hpp
game/world/octree/: Node.cpp  Node.hpp  Octree.cpp  Octree.hpp  OctreeSpace.cpp  OctreeSpace.hpp  TraceStack.hpp
safeCode/: safecodes.txt
testing/: CMakeLists.txt  Testing.cpp  Testing.h  docktest.h
